fix: Resolving overflow Issue on main div

--- a/ts/src/app/app.component.scss
+++ b/ts/src/app/app.component.scss
@@ -35,7 +35,7 @@ $primary_subtle: #fdf1eb;
 }
 
 .video {
-  width: 800px;
+  width: 100%
 }
 
 .divMask {
@@ -44,7 +44,6 @@ $primary_subtle: #fdf1eb;
   left: 0;
   bottom: 0;
   right: 0;
-  width: 800px;
   cursor: pointer;
 }
 
@@ -59,7 +58,7 @@ footer {
   margin-left: 20px;
  
   img{
-    width: 70vw;
+    width: 100%;
   }
 }
 
