--- a/ts/src/styles.scss
+++ b/ts/src/styles.scss
@@ -18,6 +18,10 @@ p {
   color: var(--primary) !important;
 }
 
+.border-primary{
+  border-color: var(--primary) !important;
+}
+
 .bg-primary-subtle{
   background-color: var(--primary-subtle) !important;
 }
